[package]
name = "wicrs_server"
version = "0.13.1"
authors = ["willemml <willem@leit.so>"]
edition = "2018"
license = "GPL-3.0"
description = "A server/channel based chat handler backend."
repository = "https://github.com/wicrs/server"
homepage = "https://wic.rs"

[dependencies]
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "default-tls"] }
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
tantivy = "0.14"
tokio = { version = "1.5", default-features = false, features = [
    "macros",
    "fs",
    "sync",
    "rt",
    "rt-multi-thread",
] }
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
xactor = { version = "0.7", features = ["runtime-tokio"], default-features = false }
lazy_static = "1.4"
futures = "0.3"
warp = "0.3"
async-graphql = { version = "2.0", features = ["uuid", "string_number", "chrono"] }
async-graphql-warp = "2.0"
chrono = { version = "0.4", features = ["serde"] }
pgp = "0.7"
smallvec = "1.6"
hex = "0.4"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.4"

[profile.release]
lto = true
