[package]
authors = ["willemml <willem@leit.so>"]
description = "A server/channel based chat handler backend."
edition = "2018"
homepage = "https://wic.rs"
license = "GPL-3.0"
name = "wicrs_server"
repository = "https://github.com/wicrs/server"
version = "0.13.1"

[dependencies]
async-graphql = {version = "2.0", features = [
  "uuid",
  "string_number",
  "chrono",
  "apollo_tracing",
  "apollo_persisted_queries",
], optional = true}
async-graphql-warp = {version = "2.0", optional = true}
async-trait = "0.1"
bincode = "1.3"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
futures-util = {version = "0.3", default-features = false, features = [
  "async-await",
  "sink",
  "std",
]}
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tantivy = {version = "0.14", optional = true}
thiserror = "1.0"
tokio = {version = "1.5", default-features = false, features = [
  "macros",
  "fs",
  "sync",
  "rt",
  "rt-multi-thread",
], optional = true}
tracing = {version = "0.1", default-features = false, features = ["log", "std"], optional = true}
url = "2.2"
uuid = {version = "0.8", features = ["serde"]}
warp = {version = "0.3", optional = true}
xactor = {version = "0.7", features = [
  "runtime-tokio",
], default-features = false, optional = true}

[features]
default = ["server"]
graphql = ["async-graphql"]
server = [
  "tantivy",
  "warp",
  "xactor",
  "async-graphql-warp",
  "graphql",
  "tokio",
  "uuid-gen",
  "tracing",
]
uuid-gen = ["uuid/v4"]

[profile.dev]
codegen-units = 512
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false

[profile.release]
lto = true
